
*   `quitefastmst` version >= 0.9.1 is now required; the introduced
    backward-incompatible changes have been addressed (see below).

*   `deadwood` version >= 0.9.1 is now required.  The code was heavily
    refactored; common MST-related functions and classes were moved therein.

*   [BACKWARD INCOMPATIBILITY]  Deprecated functions such as `mst_from_nn`
    have been removed.

*   [BACKWARD INCOMPATIBILITY]  The definition of the mutual reachability
    distance has changed.  Unlike in Campello et al.'s 2013 paper,
    now the core distance is the distance to the *M*-th nearest neighbour,
    not the *(M-1)*-th one (not including self).

*   [BACKWARD INCOMPATIBILITY]  Outlier detection based solely on whether
    a node is a leaf of a minimum spanning tree w.r.t. some mutual reachability
    distance turned out to be subpar in a more detailed empirical analysis,
    especially for smaller smoothing factors.  Note that in the previous
    versions of the package, this merely used to an experimental feature;
    Hence, `detect_noise` in `genie.default` and `skip_leaves` elsewhere
    is no longer available.

*   [NEW FEATURE]  The Genie algorithm was updated so that now arbitrary
    nodes can be skipped from the clustering process.  This allows for
    ignoring points marked as outliers at the data preprocessing stage.

*   ??? #92 NPA, NCA...

*   ???? TODO `preprocess`

*   ???? TODO [BACKWARD INCOMPATIBILITY]  `postprocess` can now be one of
    `"midliers"`, `"none"`, and `"all"`.
    New outlier detection....

*   [Python] [BUGFIX] Modifying `quitefastmst_params` via `set_state`
    now invalidates the cached MST.

*   [Python] [NEW FEATURE]  `plots.plot_scatter` has new arguments:
    `markers` and `colours`.  The module globals `mrk` and `col` were
    renamed accordingly.


## 1.2.0 (2025-07-24)

*   [Python and R] Using the new implementation of Euclidean and mutual
    reachability minimum spanning trees (quite fast in low dimensional spaces)