@@ -16,6 +16,9 @@
 *   [BACKWARD INCOMPATIBILITY]  Deprecated functions such as `mst_from_nn`
     have been removed.
 
+*   [BACKWARD INCOMPATIBILITY]  The functions from the `tools` submodule
+    have been moved to the `deadwood` package.
+
 *   [BACKWARD INCOMPATIBILITY]  The definition of the mutual reachability
     distance has changed.  Unlike in Campello et al.'s 2013 paper,
     now the core distance is the distance to the *M*-th nearest neighbour,
